k8s/canary/ingress-canary-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: armanfit-backend-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Canary"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
    - host: api.example.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: armanfit-backend
              port:
                number: 80
